# week5-learning

./: .gitignore  package-lock.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chapters.py  payment.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: payment.py  user.py
frontend/: package-lock.json
frontend/src/: App.jsx
